# giggles

./: .gitignore  CHANGES.rst  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
giggles/: __main__.py  _variants.pyx  _version.py  align.pyi  align.pyx  args.py  bam.py  core.pxd  core.pyi  core.pyx  coverage.py  cpp.pxd  gaf.py  graph.py  pedigree.py  phase.py  priorityqueue.pyx  readselect.pyi  readselect.pyx  timer.py  utils.py  variants.py  vcf.py
giggles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
giggles/cli/: __init__.py  genotype.py
src/: backwardcolumniterator.cpp  backwardcolumniterator.h  binomial.cpp  binomial.h  column.cpp  column.h  columnindexingiterator.cpp  columnindexingiterator.h  columniterator.cpp  columniterator.h  entry.cpp  entry.h  genotype.cpp  genotype.h  genotypedistribution.cpp  genotypedistribution.h  genotypehmm.cpp  genotypehmm.h  graycodes.cpp  graycodes.h  indexset.cpp  indexset.h  pedigree.cpp  pedigree.h  phredgenotypelikelihoods.cpp  phredgenotypelikelihoods.h  read.cpp  read.h  readset.cpp  readset.h  transitionprobabilitycomputer.cpp  transitionprobabilitycomputer.h  vector2d.h
