[metadata]
name = giggles
author = Samarendra Pani
author_email = Samarendra.Pani@hhu.de
url = https://github.com/samarendra-pani/giggles
description = Genotype Variants using Long Reads and Reference Genome Graph
license = MIT
long_description = file: doc/README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7
packages = find:

[options.entry_points]
console_scripts =
    giggles = giggles.__main__:main

[options.extras_require]
dev =
    Cython
    pytest
    sphinx>=4.4
    sphinx-issues
    pysam-stubs
